--- a/templates/master_page.html
+++ b/templates/master_page.html
@@ -15,9 +15,9 @@
         <header >
             <nav >
                 <div class="navbar">
-                    <a href="/flight" class="navButton">Flight</a>
+                    <a href="/search_flight" class="navButton">Flight</a>
                     <a href="/check_in" class="navButton">Check-in</a>
-                    <a href="/status" class="navButton">Flight status</a>
+                    <a href="/flight_status" class="navButton">Flight status</a>
                 </div>
             </nav>
             <div class="hero margin ">
