--- a/templates/flight_status.html
+++ b/templates/flight_status.html
@@ -3,15 +3,7 @@
 
 
 {% block content %}
-<h2>Enter your flight number to check your flight status.</h2>
-<form class="search-form">
-    <div class="form-group">
-        <label for="from">Flight Number</label>
-        <input type="text" id="from" name="from" >
-    </div>
-   
-    <div class="groupOne">
-        <button type="submit" class="submitButton">Check Status</button>
-    </div>
-</form>
+
+<p>{{ aircraft['model'] }}</p>
+
 {% endblock%}
