--- a/templates/master_page.html
+++ b/templates/master_page.html
@@ -17,7 +17,7 @@
                 <div class="navbar">
                     <a href="/search_flight" class="navButton">Flight</a>
                     <a href="/check_in" class="navButton">Check-in</a>
-                    <a href="/flight_status" class="navButton">Flight status</a>
+                    <a href="/check_flight_status" class="navButton">Check Flight Status</a>
                 </div>
             </nav>
             <div class="hero margin ">
