--- a/templates/search_flight.html
+++ b/templates/search_flight.html
@@ -9,14 +9,14 @@
     <div class="form-group">
         <select name="dropdownFrom">
             {% for option in optionsFrom %}
-                <option value="{{ option[0] }}">{{ option[1] }}</option>
+                <option value="{{ option['airport_code'] }}">{{ option['city'] }}</option>
             {% endfor %}
         </select>
     </div>
     <div class="form-group">
         <select name="dropdownWhere">
             {% for option in optionsWhere %}
-                <option value="{{ option[0] }}">{{ option[1] }}</option>
+                <option value="{{ option['airport_code'] }}">{{ option['city'] }}</option>
             {% endfor %}
         </select>
     </div>
