--- a/templates/buy_ticket.html
+++ b/templates/buy_ticket.html
@@ -2,26 +2,33 @@
 
 {% block content %}
     <div class="payment-form-container">
-        <form action="/show_ticket" method="post" class="payment-form">
-            <div class="form-group">
-                <label for="name_surname">ID Number:</label>
-                <input type="text" id="ID_number" name="ID_number" required>
+        <form action="/show_ticket" method="post" >
+            <div class="paymentContainer">
+                <div class="paymentForm">
+                    <label for="name_surname">ID Number:</label>
+                    <input type="text" id="ID_number" name="ID_number" required>
+                </div>
+                <div class="paymentForm">
+                    <label for="name_surname">Name and Surname:</label>
+                    <input type="text" id="name_surname" name="name_surname" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="name_surname">Name and Surname:</label>
-                <input type="text" id="name_surname" name="name_surname" required>
-            </div>
-            <div class="form-group">
-                <label for="expiration_date">Expiration Date:</label>
-                <input type="text" id="expiration_date" name="expiration_date" required>
-            </div>
-            <div class="form-group">
+           <div class="paymentContainer">
+            <div class="paymentForm">
                 <label for="credit_card_number">Credit Card Number:</label>
                 <input type="text" id="credit_card_number" name="credit_card_number" required>
             </div>
-            <div class="form-group">
-                <label for="card_cvv">CVV:</label>
-                <input type="text" id="card_cvv" name="card_cvv" required>
+            <div class="paymentForm">
+                <label for="expiration_date">Expiration Date:</label>
+                <input type="text" id="expiration_date" name="expiration_date" required>
+            </div>
+           
+           </div>
+            <div class="paymentContainer">
+                <div class="paymentForm">
+                    <label for="card_cvv">CVV:</label>
+                    <input type="text" id="card_cvv" name="card_cvv" required>
+                </div>
             </div>
             <button type="submit" class="submitButton">Submit</button>
         </form>
