--- a/templates/check_flight_status.html
+++ b/templates/check_flight_status.html
@@ -3,10 +3,10 @@
 
 
 {% block content %}
-<h2>Enter your flight number to check your flight status.</h2>
+<h2>Enter Your Ticket Number To Check Your Flight Status.</h2>
 <form action="/flight_status" class="search-form" method="post">
     <div class="form-group">
-        <label for="from">Flight Number</label>
+        <label for="from">Ticket Number</label>
         <input type="text" id="ticket_no" name="ticket_no" >
     </div>
    
