--- a/templates/flight_status.html
+++ b/templates/flight_status.html
@@ -1,9 +1,11 @@
 {% extends 'master_page.html' %}
 
-
-
 {% block content %}
 
+{% if aircraft and 'model' in aircraft %}
 <p>{{ aircraft['model'] }}</p>
+{% else %}
+<p class="noFlight">No flight found</p>
+{% endif %}
 
-{% endblock%}
+{% endblock %}
