Further modifications to searched_flights.html, Bflights.py and main

--- a/templates/searched_flights.html
+++ b/templates/searched_flights.html
@@ -13,7 +13,8 @@
                 <p>Departure Airport: {{ flight.departure_airport }}</p>
                 <p>Arrival Airport: {{ flight.arrival_airport }}</p>
                 <p>Status: {{ flight.status }}</p>
-                <input type="submit" name="flight_id" value="Buy Ticket" />
+                
+                <input type="submit" name="flight_id" value="Buy This Flight" />
                 <br><br>
              </div>
             {% endfor %}
