Boarding passes page backend finished

--- a/templates/boarding_pass.html
+++ b/templates/boarding_pass.html
@@ -2,7 +2,5 @@
 {% extends 'master_page.html' %}
 
 {% block content %}
-    {% for seat in seats %}
-        <p>{{ seat }}</p>
-    {% endfor %}
+    <p>{{ seat }} {{ flight }}</p>
 {% endblock%}
