Ticket Buying Added, Some Changed On DB
Functions added for necessary ticket buy

--- a/templates/buy_ticket.html
+++ b/templates/buy_ticket.html
@@ -3,6 +3,8 @@
 {% block content %}
     <div class="payment-form-container">
         <form action="/show_ticket" method="post" >
+            <input type="hidden" name="flight_id" value="{{flight_id}}" />
+
             <div class="paymentContainer">
                 <div class="paymentForm">
                     <label for="name_surname">ID Number:</label>
