--- a/templates/show_ticket.html
+++ b/templates/show_ticket.html
@@ -1,3 +1,10 @@
-{% extends "master_page.html" %}
+{% extends 'master_page.html' %}
 
-<!-- This page shows ticket info from the table write the fields according to that -->
+{% block content %}
+
+
+<p> Ticket No : {{ ticketNo }}</p>
+<p>ID Num: {{ id_num }}</p>
+
+
+{% endblock %}
