--- a/templates/show_ticket.html
+++ b/templates/show_ticket.html
@@ -2,9 +2,14 @@
 
 {% block content %}
 
+<div>
+<h1>Thank you for your purchase!</h1>
+<div class="ticketBackground">
+<p> <span id="bold">Ticket No </span> {{ ticketNo }}</p>
+<p><span id="bold">ID Num </span>  {{ id_num }}</p>
+</div>
+</div>
 
-<p> Ticket No : {{ ticketNo }}</p>
-<p>ID Num: {{ id_num }}</p>
 
 
 {% endblock %}
