manage_tickets html files and required queries are added

--- a/templates/master_page.html
+++ b/templates/master_page.html
@@ -18,6 +18,7 @@
                     <a href="/search_flight" class="navButton">Flight</a>
                     <a href="/check_in" class="navButton">Check-in</a>
                     <a href="/check_flight_status" class="navButton">Check Flight Status</a>
+                    <a href="/check_ticket_number" class="navButton">Manage Your Tickets</a>
                 </div>
             </nav>
             <div class="hero margin ">
