--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -279,3 +279,16 @@ label{
 
     font-size: 1.2rem;
 }
+
+button {
+    padding: 20px;
+    background-color: #deab01;
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #85e48a;
+  }
