--- a/templates/manage_tickets.html
+++ b/templates/manage_tickets.html
@@ -1,4 +1,3 @@
-
 {% extends 'master_page.html' %}
 
 {% block head %}
@@ -7,29 +6,37 @@
 {% endblock %}
 
 {% block content %}
+  {% if fare_condition == "Business" %}
+    {% if if_checked_in %}
+      <p>You cannot change your ticket class since you have checked in already.</p>
+    {% else %}
+      <p>You can change your ticket to Economy class. </p>
+      <form method="post" action="{{ url_for('degrade_ticket') }}">
+        <button type="submit">Degrade Your Ticket to Economy</button>
+      </form>
+    {% endif %}
+  {% else %}
+    {% if if_checked_in %}
+      <p>You cannot change your ticket class since you have checked in already.</p>
+    {% else %}
+      <p>You can upgrade your ticket to Business! </p>
+      <form method="post" action="{{ url_for('upgrade_ticket') }}">
+        <button type="submit">Upgrade Your Ticket to Business</button>
+      </form>
+    {% endif %}
+  {% endif %}
 
-{% if fare_condition == "Business" %}
-  <p>You can change your ticket to Economy class. </p>
-  <form method="post" action="{{ url_for('degrade_ticket') }}">
-    <button type="submit">Degrade Your Ticket to Economy</button>
-  </form>
-{% else %}
-  <p>You can upgrade your ticket to Business! </p>
-  <form method="post" action="{{ url_for('upgrade_ticket') }}">
-    <button type="submit">Upgrade Your Ticket to Business</button>
-  </form>
-{% endif %}
+  {% if if_checked_in %}
+    <p>You cannot cancel your flight since you have checked in already.</p>
+  {% else %}
+    <p>If you haven't checked in yet, you can cancel your flight.</p>
+    <form method="get" action="{{ url_for('cancel_flight') }}">
+      <button type="submit">Cancel Your Flight</button>
+    </form>
+  {% endif %}
 
-{% if if_checked_in %}
-  <p>You cannot cancel your flight since you have checked in already.</p>
   <form method="get" action="{{ url_for('search_flight') }}">
     <button type="submit">Main Page</button>
   </form>
-{% else %}
-  <p>If you haven't checked in yet, you can cancel your flight.</p>
-  <form method="get" action="{{ url_for('cancel_flight') }}">
-    <button type="submit">Cancel Your Flight</button>
-  </form>
-{% endif %}
 
 {% endblock %}
