Added error page with parameters, improved flight search and added date picker.

--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<h2>Enter your flight number to check in.</h2>
+<h2>Enter Your Ticket Number and ID To Check In.</h2>
 <form class="search-form" action="/boarding_pass" method="post">
     <div class="form-group">
         <label for="from">Ticket Number</label>
