--- a/templates/check_ticket_number.html
+++ b/templates/check_ticket_number.html
@@ -8,6 +8,11 @@
         <label for="from">Ticket Number</label>
         <input type="text" id="ticket_no" name="ticket_no" >
     </div>
+
+    <div class="form-group">
+        <label for="from">ID Number</label>
+        <input type="text" id="passenger_id" name="passenger_id" placeholder="Your ID Number" >
+    </div>
    
     <div class="groupOne">
         <button type="submit" class="submitButton">Check Status</button>
