--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -7,7 +7,7 @@
 <form class="search-form" action="/boarding_pass" method="post">
     <div class="form-group">
         <label for="from">Ticket Number</label>
-        <input type="number" id="ticket_no" name="ticket_no" placeholder="0005432660784" >
+        <input type="number" id="ticket_no" name="ticket_no" placeholder="Your Ticket Number" >
     </div>
 
     <div class="form-group">
