--- a/templates/check_ticket_number.html
+++ b/templates/check_ticket_number.html
@@ -6,7 +6,7 @@
 <form action="/manage_tickets" class="search-form" method="post">
     <div class="form-group">
         <label for="from">Ticket Number</label>
-        <input type="number" id="ticket_no" name="ticket_no" >
+        <input type="number" id="ticket_no" name="ticket_no" placeholder="Your Ticket Number" >
     </div>
 
     <div class="form-group">
