--- a/templates/check_flight_status.html
+++ b/templates/check_flight_status.html
@@ -7,7 +7,7 @@
 <form action="/flight_status" class="search-form" method="post">
     <div class="form-group">
         <label for="from">Ticket Number</label>
-        <input type="number" id="ticket_no" name="ticket_no" >
+        <input type="number" id="ticket_no" name="ticket_no" placeholder="Your Ticket Number" >
     </div>
 
     <div class="groupOne">
